fix(setup-assistant): pushing down btn-help text to prevent overlap with actual button - SPARK-29316

--- a/core/scss/ng/setup-assistant.scss
+++ b/core/scss/ng/setup-assistant.scss
@@ -26,6 +26,7 @@
     }
     position: absolute;
     display: none;
+    top: rem-calc(40);
     left: 0;
     right: 0;
     text-align: center;
